# openswitch-ops-passwd-srv

./: .gitreview  CMakeLists.txt  DESIGN.md  groups  passwd_srv.c  reviewers.config
include/: passwd_srv_pri.h  passwd_srv_pub.h  passwd_srv_vty.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: password_srv_test.md  test_passwd_srv_ct_sys_checking.py  test_passwd_srv_ct_user_management.py  test_passwd_srv_ct_user_mgmt_admin.py  test_passwd_srv_ct_user_mgmt_netop.py  user_management_admin_ct_test.md  user_management_ct_test.md  user_management_netop_ct_test.md
src/: passwd_srv_conn.c  passwd_srv_netlink.c  passwd_srv_util.c  passwd_srvd.c
src/cli/: CMakeLists.txt  passwd_srv_vty.c
src/lib/: CMakeLists.txt  passwd_srv_yaml.c
